<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signuppic">

    <!-- Welcome Back Text View -->

    <!-- Sign Up Text View -->

    <TextView
        android:id="@+id/tvWelcomeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="sans-serif-light"
        android:text="Create New Acount"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.901"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="Sign Up"
        android:textColor="@android:color/holo_purple"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcomeBack" />

    <!-- Full Name EditText -->
    <EditText
        android:id="@+id/etFullName"
        android:layout_width="296dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/edit_text_rounded"
        android:backgroundTint="#FFFFFF"
        android:hint="Full Name"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="#333333"
        android:textColorHint="#999999"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSignUp" />

    <!-- Email EditText -->
    <EditText
        android:id="@+id/etEmailSignUp"
        android:layout_width="297dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/edit_text_rounded"
        android:backgroundTint="#FFFFFF"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="#333333"
        android:textColorHint="#999999"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFullName" />

    <!-- Password EditText -->
    <EditText
        android:id="@+id/etPasswordSignUp"
        android:layout_width="297dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/edit_text_rounded"
        android:backgroundTint="#FFFFFF"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="#333333"
        android:textColorHint="#999999"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmailSignUp" />

    <!-- Sign Up Button -->
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/curved_button_inverse_background"
        android:text="SIGN UP"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPasswordSignUp" />

    <!-- Already Have Account Text View -->
    <TextView
        android:id="@+id/tvAlreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="Already have an account? "
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSignUp" />

    <!-- Login Button -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="88dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/curved_button_inverse_background"
        android:text="Login"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAlreadyHaveAccount" />

    <!-- Username Text View -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Username"
        app:layout_constraintBottom_toTopOf="@+id/etFullName"
        app:layout_constraintEnd_toEndOf="@+id/etFullName"
        app:layout_constraintStart_toStartOf="@+id/etFullName" />

    <!-- Email Text View -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="E-mail"
        app:layout_constraintBottom_toTopOf="@+id/etEmailSignUp"
        app:layout_constraintEnd_toEndOf="@+id/etEmailSignUp"
        app:layout_constraintStart_toStartOf="@+id/etEmailSignUp"
        app:layout_constraintTop_toBottomOf="@+id/etFullName" />

    <!-- Password Text View -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="Password"
        app:layout_constraintBottom_toTopOf="@+id/etPasswordSignUp"
        app:layout_constraintEnd_toEndOf="@+id/etPasswordSignUp"
        app:layout_constraintStart_toStartOf="@+id/etPasswordSignUp"
        app:layout_constraintTop_toBottomOf="@+id/etEmailSignUp" />

</androidx.constraintlayout.widget.ConstraintLayout>
